syntax = "proto3";

package api;

option go_package = "./internal/api"; 

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service Lecture {
    rpc Create(CreateRequest) returns (CreateResponse){ }
    rpc Get(GetRequest) returns (GetResponse){ }
    rpc Update(UpdateRequest) returns (google.protobuf.Empty){ }
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty){ }
    rpc GetList(GetListRequest) returns (GetListResponse){ }
}

message CreateRequest {
   string CreatedBy = 1;
   string CourseId = 2; 
   uint32 Number = 3;
   string Title = 4;
   string Description = 5;
}

message CreateResponse {
   string Id = 1;
}

message GetRequest {
    string Id = 1;
}

message GetResponse {
   string Id = 1;
   string CourseId = 2;
   uint32 Number = 3;
   string Title = 4;
   string Description = 5;
   string CreatedBy = 6;
   google.protobuf.Timestamp CreatedAt = 7;
   string ChangedBy = 8;
   google.protobuf.Timestamp ChangedAt = 9;
   string DeletedBy = 10;
   google.protobuf.Timestamp DeletedAt = 11;
}

message UpdateRequest {
   string ChangedBy = 1;
   string Id = 2;
   string CourseId = 3;
   uint32 Number = 4;
   string Title = 5;
   string Description = 6;
 }

 message DeleteRequest {
   string DeletedBy = 1;
   string Id = 2;
 }

message GetListRequest {
   string CourseId = 1;
}

message GetListResponse {
   repeated GetResponse Lectures = 1;
}